[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/robin_hood.png" type="Texture" id=1]
[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/red_cross.png" type="Texture" id=3]
[ext_resource path="res://Base_player.gd" type="Script" id=4]
[ext_resource path="res://assets/light_sphere.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.00808
height = 3.16837

[sub_resource type="Animation" id=2]
resource_name = "fire_arrow"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_arrow"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "melee_attack"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.64147
height = 6.47015

[node name="Base_player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.223412, 5.45109 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Move_to_goal" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, 13 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 1 )
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
pause_mode = 2
autoplay = "idle"
anims/fire_arrow = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/melee_attack = SubResource( 4 )
anims/walking = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="Sprite"]
texture = ExtResource( 5 )
energy = 0.75
shadow_enabled = true

[node name="Healthbar" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.294201, -12.1816 )

[node name="Get_ready_to_attack_timer" type="Timer" parent="."]
one_shot = true

[node name="Potion_area2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Potion_area2d"]
position = Vector2( 0.121307, 0.970455 )
shape = SubResource( 6 )

[node name="Goal_area2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal_area2d"]
position = Vector2( 0.121307, 0.970455 )
shape = SubResource( 6 )
